--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
                 <img src="./about.jpg">
             </div>
       </div>
-      </section>>
+      </section>
        <!--Footer-->
     <section class="footer">
         <h3>About Us</h3>
@@ -53,7 +53,7 @@
              <i class="fa fa-instagram"></i>
          </div>
     </section>
-    <!---Javascript for menu toggle-->>
+    <!---Javascript for menu toggle-->
     <script>
         var navLinks=document.getElementById("navLinks");
            function ShowMenu()
@@ -65,7 +65,5 @@
                navLinks.style.right="-200px";
            }
     </script>
-
-</div>
 </body>
 </html>
