--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
              <i class="fa fa-instagram"></i>
          </div>
     </section>
-     <!---Javascript for menu toggle-->>
+     <!---Javascript for menu toggle-->
       <script>
           var navLinks=document.getElementById("navLinks");
              function ShowMenu()
